--- a/src/app/home/featured/home.featured.less
+++ b/src/app/home/featured/home.featured.less
@@ -3,11 +3,15 @@
   background-color: #fff;
   color: #5d5d5d;
   padding: 10px;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .featured-content {
   float: left;
   padding-left: 10px;
-  width: 58%
+  width: 58%;
+
+  p {
+    font-size: 12px;
+  }
 }
