--- a/src/app/home/featured/home.featured.tpl.html
+++ b/src/app/home/featured/home.featured.tpl.html
@@ -8,43 +8,14 @@
 
                 <div class="share-div">
                     <ul>
-                        <li><a href="#"><img src="assets/images/share.png"></a>
-                            <ul class="collapse">
-                                <li>
-                                    <div class="share-box" style="left:20px;top:137px">
-                                        <p><img src="assets/images/share.png" class="img-responsive"></p>
-
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/facebook.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">4.0 K</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/twitter.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">507</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/google+.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">4.5 K</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/rss.png" class="pull-left">
-                                            </div>
-                                            <div class="like-box"><span class="count">78.8 K</span></div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
+                        <li><a href="#"><img src="assets/images/share.png"></a></li>
                     </ul>
                 </div>
             </div>
             <div class="featured-content">
                 <h6>Gold Gym: Kalyani Nagar</h6>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                <p>Gold's Gym has the best fitness gyms near you to achieve your fitness goals!</p>
             </div>
         </div>
     </div>
@@ -57,43 +28,14 @@
 
                 <div class="share-div">
                     <ul>
-                        <li><a href="#"><img src="assets/images/share.png"></a>
-                            <ul class="collapse">
-                                <li>
-                                    <div class="share-box" style="left:20px;top:137px">
-                                        <p><img src="assets/images/share.png" class="img-responsive"></p>
-
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/facebook.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">4.0 K</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/twitter.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">507</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/google+.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">4.5 K</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/rss.png" class="pull-left">
-                                            </div>
-                                            <div class="like-box"><span class="count">78.8 K</span></div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
+                        <li><a href="#"><img src="assets/images/share.png"></a></li>
                     </ul>
                 </div>
             </div>
             <div class="featured-content">
                 <h6>Rajesh Jani</h6>
 
-                <p>Vivamus ipsum pharetra interdum condimentum augue. Enim iaculis</p>
+                <p>He is the best known coach in your town to get your kids trained for Football.</p>
             </div>
         </div>
     </div>
@@ -103,46 +45,16 @@
         <div class="featrured-box">
             <div class="pull-left">
                 <p><img src="assets/images/featured.gif"></p>
-
                 <div class="share-div">
                     <ul>
-                        <li><a href="#"><img src="assets/images/share.png"></a>
-                            <ul class="collapse">
-                                <li>
-                                    <div class="share-box" style="left:20px;top:137px">
-                                        <p><img src="assets/images/share.png" class="img-responsive"></p>
-
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/facebook.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">4.0 K</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/twitter.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">507</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/google+.png"
-                                                                        class="pull-left"></div>
-                                            <div class="like-box"><span class="count">4.5 K</span></div>
-                                        </div>
-                                        <div class="social-network">
-                                            <div class="pull-left"><img src="assets/images/rss.png" class="pull-left">
-                                            </div>
-                                            <div class="like-box"><span class="count">78.8 K</span></div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
+                        <li><a href="#"><img src="assets/images/share.png"></a></li>
                     </ul>
                 </div>
             </div>
             <div class="featured-content">
-                <h6>Gold Gym: Kalyani Nagar</h6>
+                <h6>Sachin Tendulkar</h6>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                <p>Indian cricketer widely acknowledged as one of the greatest batsmen of all time.</p>
             </div>
         </div>
     </div>
