--- a/src/app/home/events/home.events.less
+++ b/src/app/home/events/home.events.less
@@ -1,24 +1,20 @@
 .current-events {
 
   .event-box {
-    height: 43px;
-    background-color: #fff;
-    color: #000;
-    box-shadow: 3px 3px 3px #333333;
-    margin-bottom: 10px;
+    height: 50px;
+    width: 200px;
   }
 
   .happening-box {
-    width: 201px;
+    width: 200px;
+    height: 200px;
     float: left;
     margin-left: 10px;
-    text-align: center;
-  }
 
-  .happening-txt {
-    float: left;
-    padding: 1px 0 0 10px;
-    width: 150px;
+    p {
+      text-align: left;
+      font-size: 12px;
+    }
   }
 
   .carousel-inner {
