--- a/src/app/home/offers/home.offers.less
+++ b/src/app/home/offers/home.offers.less
@@ -8,7 +8,8 @@
     font-family: tahoma;
     font-size: 11px;
     overflow: hidden;
-    width: 201px;
+    width: 200px;
+    height: 200px;
     float: left;
     margin-left: 10px;
   }
