--- a/src/app/home/offers/home.offers.tpl.html
+++ b/src/app/home/offers/home.offers.tpl.html
@@ -7,12 +7,11 @@
         <carousel>
             <slide ng-repeat="slides in offersSlides">
                 <div class="box" ng-repeat="offer in slides">
-                    <img ng-src="{{offer.imgUrl}}" class="img-responsive">
+                    <img ng-src="{{offer.imgUrl || '/assets/images/offer.jpg'}}" class="img-responsive">
                     <div class="box-content">
-                        <h4>{{offer.shop}}</h4>
-                        <p>{{offer.offers[0].title}}</p>
-                        <p>{{offer.offers[1].title}}</p>
+                        <h4>{{offer.provider}}</h4>
 
+                        <p>{{offer.heading}}</p>
                         <p class="pull-right">
                             <a href="">
                                 <img src="assets/images/share.png" class="img-responsive"/>
