--- a/src/app/app.less
+++ b/src/app/app.less
@@ -56,8 +56,6 @@
   margin-left: 10px
 }
 
-
-
 .nav-tabs > li.active > a.certificate {
   background-color: #255bac !important;
   border: 1px solid #255bac !important;
@@ -138,10 +136,6 @@ label.overflow {
   padding: 0
 }
 
-.other-features li {
-  list-style: url(../images/check.gif) inside
-}
-
 .coaching-exp {
   background-color: #f3f3f3;
   padding: 20px;
@@ -171,106 +165,6 @@ label.overflow {
 
 .likes {
   margin: -3px 0 0 5px
-}
-
-.delivery, .map, .share, .gallery {
-  background: url(../images/delivery.png) no-repeat;
-  width: 27px;
-  height: 27px;
-  display: block;
-  text-indent: -100000px;
-  float: left
-}
-
-.delivery:hover, .map:hover, .share:hover, .gallery:hover {
-  background: url(../images/delivery_Hover.png) no-repeat;
-  width: 27px;
-  height: 27px;
-  cursor: pointer
-}
-
-.map {
-  background: url(../images/map_pin.png) no-repeat
-}
-
-.map:hover {
-  background: url(../images/map_pin_Hover.png) no-repeat
-}
-
-.share {
-  background: url(../images/share-.png) no-repeat
-}
-
-.share:hover {
-  background: url(../images/share_Hover.png) no-repeat
-}
-
-.gallery {
-  background: url(../images/gallery.png) no-repeat;
-}
-
-.gallery:hover {
-  background: url(../images/gallery_Hover.png) no-repeat
-}
-
-.star-green, .star-grey, .star-grey-green {
-  background: url(../images/star_green.png) no-repeat;
-  width: 16px;
-  height: 16px;
-  display: block;
-  text-indent: -100000px;
-  float: left
-}
-
-.star-grey {
-  background: url(../images/star_grey.png) no-repeat
-}
-
-.star-grey-green {
-  background: url(../images/star_grey_green.png) no-repeat;
-}
-
-.fb {
-  background: url(../images/fb.png) no-repeat;
-  width: 22px;
-  height: 23px;
-  display: inline-block;
-  position: relative;
-  top: -2px;
-  margin-right: 5px;
-  float: left
-}
-
-.google {
-  background: url(../images/g+.png) no-repeat;
-  width: 23px;
-  height: 26px;
-  display: inline-block;
-  position: relative;
-  top: -2px;
-  margin-right: 5px;
-  float: left
-}
-
-.share-box {
-  width: 66px;
-  padding: 5px;
-  background-color: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  position: absolute;
-  width: 80px;
-  z-index: 1
-}
-
-.like-box {
-  background-color: #e8eae9;
-  border: 1px solid #cdcdcd;
-  border-radius: 0 5px 5px 0;
-  color: #3d2c32;
-  height: 24px;
-  margin-left: 22px;
-  width: 48px;
 }
 
 .count {
@@ -324,7 +218,11 @@ label.overflow {
 .btm-bg {
   background-color: #3f3f3f;
   padding: 10px;
-  color: #6dbee8
+  color: #6dbee8;
+
+  a {
+    color: #6dbee8;
+  }
 }
 
 .cancel {
@@ -443,7 +341,6 @@ label.overflow {
   }
 
 }
-
 
 h1, .h1 {
   color: #6B6B6B;
