--- a/src/app/search/bar/search.bar.tpl.html
+++ b/src/app/search/bar/search.bar.tpl.html
@@ -1,9 +1,13 @@
 <div class="search" dropdown>
     <div class="input-group search-group pull-left">
-        <span class="input-group-addon searchFilter dropdown-toggle" dropdown-toggle><i
-                class="glyphicon glyphicon-align-justify"></i> <i class="glyphicon glyphicon-chevron-down"></i></span>
-        <input type="text" class="form-control typeahead" id="search"
-               placeholder="Search for Players / Coach / Facilities / Events / Suppliers">
+        <span class="input-group-addon searchFilter dropdown-toggle" dropdown-toggle>
+            <i class="glyphicon glyphicon-align-justify"></i>
+            <i class="glyphicon glyphicon-chevron-down"></i>
+        </span>
+        <input type="text"
+               class="form-control typeahead"
+               id="search"
+               placeholder="Search for Players / Coach / Facilities / Events / Suppliers"/>
     </div>
     <div>
         <button class="btn btn-primary pull-left">GO</button>
