--- a/src/app/shared/footer/footer.tpl.html
+++ b/src/app/shared/footer/footer.tpl.html
@@ -35,11 +35,17 @@
                     <p ng-repeat="sportsGateway in sportsGateways">{{sportsGateway}}</p>
                 </div>
                 <div class="col-sm-2">
-                    <p><a href="#"><img src="assets/images/social-network.png"></a></p>
+                    <h4>justKhelo</h4>
 
-                    <p><a href="#"><img src="assets/images/google-play.gif"></a></p>
+                    <p><a href="#">Advertise with us</a></p>
 
-                    <p><a href="#"><img src="assets/images/app-store.gif"></a></p>
+                    <p><a href="#">About Us</a></p>
+
+                    <p><a href="#">Careers</a></p>
+
+                    <p><a href="#">Contact Us</a></p>
+
+                    <p><a href="#">Terms of Use</a></p>
                 </div>
             </div>
         </div>
@@ -48,7 +54,7 @@
     <div class="panel-footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-7">
                     <div class="number">
                         <h2>{{registeredEntitiesCount.enthusiasts}}</h2>
 
@@ -56,10 +62,12 @@
                     </div>
                     <div class="number">
                         <h2>{{registeredEntitiesCount.players}}</h2>
+
                         <p>Registered<br>Players</p>
                     </div>
                     <div class="number">
                         <h2>{{registeredEntitiesCount.coaches}}</h2>
+
                         <p>Registered<br>Coaches</p>
                     </div>
                     <div class="number">
@@ -83,20 +91,18 @@
                         <p>Listed<br>Offers</p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
+                <div class="col-sm-2">
+                    <p><a href="#"><img src="assets/images/social-network.png"></a></p>
 
-    <div class="panel-footer1 footer-links">
-        <div class="container">
-            <ul class="links">
-                <li><a href="#">Events registration?</a></li>
-                <li><a href="#">Advertise with us</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Terms of Use</a></li>
-            </ul>
+                    <p><a href="#"><img src="assets/images/google-play.gif"></a></p>
+
+                    <p><a href="#"><img src="assets/images/app-store.gif"></a></p>
+                </div>
+                <div class="col-sm-3">
+                    <p>All trademarks are properties of their respective owners © 2014-2015
+                        justKhelo<sup>™</sup> Sports Media Pvt Ltd<br> All rights reserved</p>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
