--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -104,7 +104,7 @@
   }
 
   .navbar-nav .open .dropdown-menu {
-    background-color: #DCDCC5;
+    background-color: #F2F2F2;
     padding-bottom: 20px;
   }
 
