added multiple cities support

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -293,6 +293,10 @@ label.overflow {
   background-position: 0px -132px;
 }
 
+.search-img.events {
+  background-position: 0px 0px;
+}
+
 .searchFilter {
   cursor: pointer
 }
