--- a/src/app/home/events/home.events.tpl.html
+++ b/src/app/home/events/home.events.tpl.html
@@ -1,7 +1,7 @@
 <div class="col-lg-6 current-events form-group">
     <div class="wrapper">
         <h1 class="pull-left">What’s happening around you..!</h1>
-        <a href="#" class="pull-right form-group">View all events</a>
+        <a ng-href="/events/{{location}}" class="pull-right form-group">View all events</a>
     </div>
     <div class="clear-both">
         <carousel>
