--- a/src/app/home/offers/home.offers.tpl.html
+++ b/src/app/home/offers/home.offers.tpl.html
@@ -1,7 +1,7 @@
 <div class="col-lg-6 best-offers form-group">
     <div class="wrapper">
         <h1 class="pull-left">Best Offers on the block...!</h1>
-        <a href="#" class="pull-right form-group">View all offers</a>
+        <a ng-href="/offers/{{location}}" class="pull-right form-group">View all offers</a>
     </div>
     <div class="clear-both">
         <carousel>
