--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -45,8 +45,13 @@
   padding: 5px 10px;
 }
 
-.location {
-  color: #ff7301;
+.header-settings {
+  .location {
+    margin: 4px 10px 4px 0;
+    .form-control {
+      height: 20px;
+    }
+  }
 }
 
 @media (min-width: 1200px) {
