added basic search support

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -7,9 +7,6 @@
   }
 }
 
-.location {
-  color: #ff7301
-}
 
 .search-group {
   width: 81%;
@@ -270,7 +267,7 @@ label.overflow {
 }
 
 .search-img.all {
-  background-position: 0px 0px;
+  background-position: 0 0;
 }
 
 .search-img.coaches {
@@ -293,13 +290,18 @@ label.overflow {
   background-position: 0px -132px;
 }
 
-.search-img.events {
-  background-position: 0px 0px;
+.search-img.offers {
+  background-position: 0 0;
 }
 
 .searchFilter {
   cursor: pointer
 }
+
+.border-btm {
+  border-bottom: 2px dotted #979797;
+}
+
 
 .glyphicon {
   position: relative;
